Make joined trips to be accessible and fix bugs